@@ -7,6 +7,7 @@ Overview of changes in lightdm 0.9.3
     * Always set XAUTHORITY environment variable so sudo keeps accessing the
       correct X authority.
     * Connect up lightdm_user_get_logged_in in liblightdm-gobject
+    * Ignore sessions that fail TryExec or are hidden
 
 Overview of changes in lightdm 0.9.2
 
